webdav/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: webdav-strip-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /webdav
