webdav/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav
  namespace: default
spec:
  selector:
    app: webdav
  ports:
  - name: webdav
    port: 6065
    targetPort: 6065
