webdav/funnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdav-funnel
  namespace: default
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: webdav
      port:
        number: 6065
  tls:
  - hosts:
    - webdav
