webdav/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdav
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: webdav.k8s.ecafe.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webdav
            port:
              number: 6065
